# haskell-sic-assembler

./: .gitignore
ass1/: FA.dev  arith.asm  arithr.asm  cat.asm  echo.asm  horner.asm  poly.asm  polysub.asm  print.asm  rec.asm  screen.asm  stack.asm
ass2/: CHANGELOG.md  Commands.hs  Loader.hs  Machine.hs  Main.hs  echo.asm  rec.asm  spo.cabal  spo.cabal.save0
ass2/app/: Commands.hs  Loader.hs  Machine.hs  Main.hs  Simulator.hs  UI.hs
ass2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ass3/: .gitignore  CHANGELOG.md  ass3.cabal  echo.asm  life.asm  test.asm
ass3/app/: Main.hs
ass3/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ass3/src/Assembler/: Assembler.hs
ass3/src/Parsers/: Common.hs  Data.hs  Instruction.hs  Parser.hs
life/: life.asm
