cabal-version:      2.4
name:               spo
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable spo
    main-is:          Main.hs
    other-modules:
        Loader
        , Machine
        , Commands
        , UI
        , Simulator

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: 
        split ^>=0.2.3.5
        , ghc-prim ^>=0.9.0
        , profunctors ^>=5.6.2
        , newtype ^>=0.2.2.0
        , ansi-terminal
        , attoparsec
        , base >=4.7 && <5
        , containers
        , mtl
        , optparse-applicative
        , parser-combinators
        , text
        , brick
        , vty
        , lens
        , word-wrap
        , pipes
        , binary
        , bytestring
        , text-zipper
        , adjunctions
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded -O2
